# hashverify

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  verifica_hash.py
docs/: USAGE.md
src/hashverify/: __init__.py  __main__.py  config.py  gui.py  hash_calculator.py  models.py  virustotal_api.py
